--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "@microsoft/sp-office-ui-fabric-core": "1.8.2",
     "@microsoft/sp-property-pane": "1.8.2",
     "@microsoft/sp-webpart-base": "1.8.2",
+    "@pnp/sp": "^2.0.10",
     "@types/es6-promise": "0.0.33",
     "@types/react": "16.7.22",
     "@types/react-dom": "16.8.0",
     "@types/webpack-env": "1.13.1",
     "office-ui-fabric-react": "6.143.0",
     "react": "16.7.0",
-    "react-dom": "16.7.0"
+    "react-dom": "16.7.0",
+    "sp-pnp-js": "^3.0.10"
   },
   "resolutions": {
     "@types/react": "16.7.22"
